--- a/estilo.css
+++ b/estilo.css
@@ -6,11 +6,11 @@
 }
 
 body {
-    background: #ffffff;
+    background: #000000;
     overflow-x: hidden;
 }
 
-.navbar {
+header {
     display: flex;
     align-items: center;
     padding: 20px;
@@ -22,6 +22,7 @@ body {
     width: 350px;
     height: auto;
     margin-left: 10px;
+    cursor: pointer;
 }
 
 .hamburger-icon {
@@ -65,7 +66,7 @@ body {
 h1 {
     color: #DFC05C;
     text-align: center;
-    margin-top: 140px;
+    margin-top: 150px;
 }
 
 .resumo-inicio {
@@ -76,25 +77,32 @@ h1 {
     font-size: 22px;
 }
 
-.mercado {
-    color: #8F8F8F;
-    text-align: center;
-    padding: 35px 35px;
-    font-size: 18px;
-}
-
-.imagem-produto {
+.imagem-produto1 {
     position: relative;
     width: 100%;
-    max-width: 100%;
     text-align: center;
 }
 
-.imagem-produto img {
+.imagem-produto1 img {
+    width: 100%;
+    height: 350px;
+    display: block;
+    object-fit: cover;
+    border-radius: 0;
+}
+
+.imagem-produto2 {
+    position: relative;
+    width: 100%;
+    text-align: center;
+}
+
+.imagem-produto2 img {
     width: 100%;
     height: auto;
     display: block;
     object-fit: cover;
+    border-radius: 0;
 }
 
 .texto-imagem {
@@ -109,13 +117,14 @@ h1 {
     line-height: 1.4;
 }
 
+
 .caixa1 {
-    top: 40px;
+    top: 35px;
     left: 10px;
 }
 
 .caixa2 {
-    bottom: 135px;
+    bottom: 35px;
     right: 10px;
 }
 
@@ -125,6 +134,13 @@ h1 {
     text-align: center;
     padding: 50px 80px;
     font-size: 22px;
+}
+
+.mercado {
+    color: #8F8F8F;
+    text-align: center;
+    padding: 35px 35px;
+    font-size: 18px;
 }
 
 table {
@@ -147,34 +163,91 @@ table {
 }
 
 
-.botao {
+button {
     display: flex;
     justify-self: center;
-    margin-top: 20px;
+    margin-top: 40px;
     background-color: #5A3825;
-    /* Marrom */
     color: #DFC05C;
-    /* Dourado */
-    border: 2px solid #DFC05C;
-    /* Borda dourada */
+    border: 3px solid #DFC05C;
     border-radius: 25px;
-    /* Bordas arredondadas */
     padding: 12px 40px;
-    /* Espaçamento interno */
     text-decoration: none;
     font-size: 20px;
     font-weight: 600;
     transition: 0.3s;
     text-align: center;
+    cursor: pointer;
 }
 
-/* Efeito hover */
-.botao:hover {
+button:hover {
     background-color: #DFC05C;
-    /* Fundo dourado */
     color: #5A3825;
-    /* Texto marrom */
-    transform: scale(1.05);
-    /* Leve aumento */
-    box-shadow: 0 0 10px rgba(212, 175, 55, 0.6);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+}
+
+input,
+textarea {
+    background: none;
+    border: none;
+    border-bottom: 1px solid #aaa;
+    color: #ffffff;
+    padding: 15px 0;
+    font-size: 20px;
+    outline: none;
+    margin-bottom: 25px;
+    margin-top: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
+    text-align: center;
+}
+
+::placeholder {
+    color: #999;
+    text-align: center;
+    font-weight: 600;
+}
+
+footer {
+    background-color: #5a3825;
+    text-align: center;
+    margin-top: 100px;
+    padding: 40px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-logo img {
+    width: 250px;
+    margin-bottom: 25px;
+}
+
+footer p {
+    color: #000000;
+    font-size: 18px;
+    margin: 10px 0 20px 0;
+}
+
+.redes {
+    margin-top: 15px;
+    display: flex;
+    gap: 30px;
+}
+
+.redes img {
+    width: 45px;
+    height: 45px;
+    transition: transform 0.3s ease;
+}
+
+.redes img:hover {
+    transform: scale(1.1);
 }
